[package]
name = "graphql-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
juniper = { version = "0.15.10", features = [] }
juniper_rocket = "0.8.2"
tonic = { version = "0.8", features = ["tls"] }
prost = "0.11"
chrono = "0.4.22"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
serde = "1.0.152"
serde_json = "1.0.91"
futures = "0.3.27"
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_cors = { git = "https://github.com/lawliet89/rocket_cors", rev = "54fae07" }

[build-dependencies]
tonic-build = "0.8"
dotenv = "0.15.0"

